# Devoir4_Ising_Template

./: autocorrect.py  pyproject.toml  requirements.txt
latex/: enonce.tex
src/: ising.py  observable.py
tests/base_tests/: test_ising.py
tests/base_tests/data/: energy.npy  magnetization.npy  temps_correlation.npy
